# resolve-flatpak

./: .gitignore  README.md  com.blackmagic.Resolve.Beta.yaml  com.blackmagic.Resolve.yaml  run_complete_installation.sh
desktop/beta/: com.blackmagic.Resolve.Beta.PanelSetup.desktop  com.blackmagic.Resolve.Beta.RAWPlayer.desktop  com.blackmagic.Resolve.Beta.RAWSpeedTest.desktop  com.blackmagic.Resolve.Beta.RemoteMonitoring.desktop  com.blackmagic.Resolve.Beta.desktop
desktop/stable/: com.blackmagic.Resolve.PanelSetup.desktop  com.blackmagic.Resolve.RAWPlayer.desktop  com.blackmagic.Resolve.RAWSpeedTest.desktop  com.blackmagic.Resolve.RemoteMonitoring.desktop  com.blackmagic.Resolve.desktop
metainfo/beta/: com.blackmagic.Resolve.Beta.metainfo.xml
metainfo/stable/: com.blackmagic.Resolve.metainfo.xml
python/: README.md  pyproject.toml
python/resolve_builder/: __init__.py  __main__.py  constants.py  download.py  main.py  metainfo.py  setup.py  version.py
