[project]
name = "resolve-builder"
version = "1.0.0"
description = "Build tools for packaging DaVinci Resolve as a Flatpak"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "synsejse" }]
keywords = ["davinci-resolve", "flatpak", "blackmagic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "requests>=2.32.5",
    "tqdm>=4.67.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
    "types-tqdm>=4.66.0",
]

[project.scripts]
resolve-builder = "resolve_builder.main:main"

[project.urls]
Homepage = "https://github.com/synsejse/resolve-flatpak"
Repository = "https://github.com/synsejse/resolve-flatpak"
Issues = "https://github.com/synsejse/resolve-flatpak/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resolve_builder"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["resolve_builder"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
